--- a/css_files/my-cart.css
+++ b/css_files/my-cart.css
@@ -115,71 +115,17 @@
 }
 
 .my-cart .cart-item .cart-item-info .quantity-remove {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 5px 0;
+  margin: 0px 0;
 }
 
-.my-cart .cart-item .cart-item-info .quantity {
-  margin: 20px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 50%;
-}
-
-.my-cart .cart-item .cart-item-info .quantity .select-quantity {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 90px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 2.5px solid #afafaf;
-  border-radius: 5px;
-  padding: 5px;
-}
-
-.my-cart .cart-item .cart-item-info .quantity .select-quantity .img {
-  width: 40%;
-  height: 100%;
-  background-color: transparent;
-  border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.my-cart .cart-item .cart-item-info .quantity .select-quantity .img img {
-  width: 50%;
-  height: 50%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-.my-cart .cart-item .cart-item-info .quantity .select-quantity .quantity-text h4 {
+.my-cart .cart-item .cart-item-info p {
   color: black;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
-.my-cart .cart-item .cart-item-info .quantity p {
-  margin-left: 5px;
+.my-cart .cart-item .cart-item-info p span {
+  font-weight: bolder;
   color: black;
 }
 
@@ -259,7 +205,7 @@
   color: red;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
   .my-cart {
     width: 100vw;
     right: -100vw;
