--- a/css_files/product.scss
+++ b/css_files/product.scss
@@ -131,16 +131,13 @@ body {
                         color: red;
                         font-size: larger;
                     }
-                    #product-price-cart-dashed {
-                        color: grey;
-                        font-size: large;
-                        text-decoration: line-through;
+                  
+                    .offf{
+                        color: green;
+                        font-size: 23px;
                     }
                 }
-                h2 {
-                    color: green;
-                    font-size: small;
-                }
+           
 
                 .quantity {
                     margin: 20px 0;
