--- a/css_files/all-products.scss
+++ b/css_files/all-products.scss
@@ -16,14 +16,13 @@
         text-align: center;
         h1 {
             font-size: 4vw;
-
             color: white;
         }
     }
 }
 
 .gaming-section-all {
-    width: fit-content;
+    width: 100vw;
     padding: 50px;
     h1 {
         font-size: 47px;
@@ -40,6 +39,7 @@
         margin: 30px auto;
         margin-bottom: 100px;
         .card-1 {
+            
             width: 310px;
             height: 380px;
             background-color: rgb(206, 206, 238);
@@ -65,6 +65,7 @@
                     z-index: 10;
                     font-size: 14px;
                     padding: 5px 15px;
+                    
                     border-top-right-radius: 3px;
                     border-bottom-right-radius: 3px;
                 }
@@ -93,7 +94,7 @@
             }
             .tail {
                 width: 100%;
-                height: 48%;
+                
                 height: fit-content;
                 background-color: white;
                 border-radius: 5px;
