--- a/css_files/order.scss
+++ b/css_files/order.scss
@@ -6,7 +6,7 @@ font-family: "Poppins", sans-serif;
 
 }
 body{
-    background: linear-gradient(to right,blue,rgb(90, 90, 249));
+    background:rgb(9, 149, 149);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,35 +16,36 @@ body{
         width: 450px;
         height: fit-content;
         padding: 20px;
-        border-radius: 5px;
-    //    box-shadow: 0 0 18px rgb(216, 8, 8);
+        border-radius: 0px;
+        background-color: black;
+    //   box-shadow: 12px 12px rgb(132, 2, 2);
         
-            h3{
+            h2{
                 text-align: center;
                 color: white;
                 padding: 10px ;
             }
             input{
                 width: 100%;
-                border: 2px solid white;
+                border: 2px solid rgb(50, 50, 50);
                 padding: 10px ;
-                background-color: transparent;
+                background-color: rgb(50, 50, 50);
     
                 margin: 10px 0;
                 border-radius: 5px;
                 color: white;
             }
             input::placeholder{
-                color: white;
+                color: rgb(175, 175, 175);
             }
             input[type="submit"]{
-                background-color: white;
-                color: blue;
-                border: 2px solid white;
+                background-color: rgb(9, 149, 149);
+                color: white;
+                border: 2px solid rgb(9, 149, 149);
                 font-weight: bolder;
             }
             input:focus{
-                outline: 2px solid white;
+                outline: 2px solid rgb(9, 149, 149);
                 border-color: transparent;
             }
             span{
@@ -61,8 +62,8 @@ body{
                 button{
                     width: 100%;
                     padding: 10px;
-                    border: 2px solid white;
-                    color: white;
+                    border: 2px solid rgb(9, 149, 149);
+                    color: rgb(9, 149, 149);
                     background-color: transparent;
                     font-weight: bolder;
                     border-radius: 5px;
